# osp_antar_ice

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  imgui.ini
apptainer/: osp_renderer.def
cmake/: ospr_ext.cmake
include/ospr/: camera.h  colormap.h  image.h  keyframe.h  math.h  opacity_curve.h  render.h  scene.h  script.h  vtk_xml.h
scenes/: c16.json  peel.json  terrain_bed.json  tetra.json
scripts/: check_linux_build.sh  ext.sha256  ext.versions  fetch_ext.sh
src/core/: CMakeLists.txt  colormap.cpp  image.cpp  keyframe.cpp  opacity_curve.cpp  render.cpp  scene.cpp  script.cpp  vtk_xml.cpp
src/preview/: CMakeLists.txt  main.cpp
src/render/: CMakeLists.txt  main.cpp
